--- a/app/src/main/res/layout/layout_main_activity.xml
+++ b/app/src/main/res/layout/layout_main_activity.xml
@@ -13,13 +13,21 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         tools:targetApi="lollipop" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/la_botonera"
-        android:id="@+id/textView"
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
         android:layout_below="@+id/my_toolbar"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true">
+
+        <GridLayout
+            android:id="@+id/grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alignmentMode="alignMargins"
+            android:columnCount="2" />
+
+    </ScrollView>
+
 
 </RelativeLayout>
