Start w/ add button feature; Big refactor; Added action bar's home icon;

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/font_size_default</item>
+    </style>
+
+    <style name="MyCustomTheme.Form" />
+
+    <style name="MyCustomTheme.Form.Label">
+        <item name="android:textSize">@dimen/font_size_small</item>
     </style>
 
 </resources>
