--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,6 @@
         style="@style/MyCustomTheme.DefaultLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            style="@style/MyCustomTheme.Subtitle"
-            android:text="@string/home_subtitle" />
-    </LinearLayout>
+        android:orientation="vertical"/>
 
 </ScrollView>
