--- a/app/src/main/res/layout/activity_add_button.xml
+++ b/app/src/main/res/layout/activity_add_button.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/add_button_main_layout"
-                style="@style/MyCustomTheme.DefaultLayout"
+<RelativeLayout style="@style/MyCustomTheme.DefaultLayout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -25,7 +24,6 @@
         android:maxLines="1" />
 
     <Button
-        android:id="@+id/addbutton_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
