Refactor: RecyclerView instead of LinearLayout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,7 @@
-<ScrollView
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/buttons_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerHorizontal="true"
-    tools:context=".feature.home.HomeActivity">
-
-    <LinearLayout
-        android:id="@+id/buttons_container"
-        style="@style/MyCustomTheme.DefaultLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"/>
-
-</ScrollView>
+    android:layout_height="wrap_content"
+    tools:context=".feature.home.HomeActivity"/>
