--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:layout_height">@dimen/material_subtitle_height</item>
         <item name="android:gravity">center_vertical</item>
     </style>
-    <style name="MyCustomTheme.Button">
+    <style name="MyCustomTheme.ButtonListItem">
         <!--<item name="android:capitalize">words</item>-->
     </style>
 
