--- a/app/src/main/res/layout/activity_add_button.xml
+++ b/app/src/main/res/layout/activity_add_button.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/MyCustomTheme.DefaultLayout"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/MyCustomTheme.DefaultLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/addbutton_name_label"
@@ -20,8 +21,10 @@
         android:layout_below="@id/addbutton_name_label"
         android:hint="@string/addbutton_placeholder"
         android:imeOptions="actionDone"
+        android:importantForAutofill="no"
         android:inputType="text"
-        android:maxLines="1" />
+        android:maxLines="1"
+        tools:ignore="UnusedAttribute" />
 
     <Button
         android:layout_width="match_parent"
