--- a/app/src/main/res/layout/layout_button.xml
+++ b/app/src/main/res/layout/layout_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ToggleButton style="@style/MyCustomTheme.ButtonListItem"
+<ToggleButton style="@style/feature_base_MyCustomTheme.ButtonListItem"
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
