--- a/feature_addbutton/src/main/res/layout/feature_addbutton_activity_add_button.xml
+++ b/feature_addbutton/src/main/res/layout/feature_addbutton_activity_add_button.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/MyCustomTheme.DefaultLayout"
+    style="@style/feature_addbutton_MyCustomTheme.DefaultLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/addbutton_name_label"
-        style="@style/MyCustomTheme.Form.Label"
+        style="@style/feature_addbutton_MyCustomTheme.Form.Label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="@string/addbutton_name" />
+        android:text="@string/feature_addbutton_name" />
 
     <EditText
         android:id="@+id/addbutton_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/addbutton_name_label"
-        android:hint="@string/addbutton_placeholder"
+        android:hint="@string/feature_addbutton_placeholder"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="text"
@@ -31,6 +32,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:onClick="saveButton"
-        android:text="@string/addbutton_save" />
+        android:text="@string/feature_addbutton_save" />
 
 </RelativeLayout>
