--- a/feature_addbutton/src/main/res/values/styles.xml
+++ b/feature_addbutton/src/main/res/values/styles.xml
@@ -1,16 +1,20 @@
 <resources>
 
-    <style name="MyCustomTheme.Form" />
+    <style name="feature_addbutton_MyCustomTheme" parent="feature_base_MyCustomTheme" />
 
-    <style name="MyCustomTheme.Form.Label">
-        <item name="android:textSize">@dimen/font_size_small</item>
+    <style name="feature_addbutton_MyCustomTheme.Form" />
+
+    <style name="feature_addbutton_MyCustomTheme.Form.Label">
+        <item name="android:textSize">@dimen/feature_base_font_size_small</item>
     </style>
 
-    <style name="MyCustomTheme.DefaultLayout">
-        <item name="android:paddingStart">@dimen/material_horizontal_padding</item>
-        <item name="android:paddingEnd">@dimen/material_horizontal_padding</item>
-        <item name="android:paddingTop">@dimen/material_horizontal_padding</item>
-        <item name="android:paddingBottom">@dimen/material_horizontal_padding</item>
+    <style name="feature_addbutton_MyCustomTheme.DefaultLayout">
+        <item name="android:paddingLeft">@dimen/feature_base_material_horizontal_padding</item>
+        <item name="android:paddingStart">@dimen/feature_base_material_horizontal_padding</item>
+        <item name="android:paddingEnd">@dimen/feature_base_material_horizontal_padding</item>
+        <item name="android:paddingRight">@dimen/feature_base_material_horizontal_padding</item>
+        <item name="android:paddingTop">@dimen/feature_base_material_horizontal_padding</item>
+        <item name="android:paddingBottom">@dimen/feature_base_material_horizontal_padding</item>
     </style>
 
 </resources>
