--- a/feature_base/src/main/res/values-night/colors.xml
+++ b/feature_base/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#002b00</color>
-    <color name="colorPrimaryDark">#002100</color>
-    <color name="colorAccent">#005c00</color>
+    <color name="feature_base_colorPrimary">#002b00</color>
+    <color name="feature_base_colorPrimaryDark">#002100</color>
+    <color name="feature_base_colorAccent">#005c00</color>
 </resources>
