Fix button sharing and add a test case for future myself

--- a/app/src/main/res/xml/file_provider_paths.xml
+++ b/app/src/main/res/xml/file_provider_paths.xml
@@ -3,5 +3,5 @@
     <!-- Check https://developer.android.com/training/secure-file-sharing/setup-sharing#DefineMetaData for more info. -->
     <external-files-path
         name="buttons"
-        path="." />
+        path="Music/" />
 </paths>
