--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="feature_base_colorPrimary">#002b00</color>
-    <color name="feature_base_colorPrimaryDark">#002100</color>
-    <color name="feature_base_colorAccent">#005c00</color>
+    <color name="app_colorPrimary">#002b00</color>
+    <color name="app_colorPrimaryDark">#002100</color>
+    <color name="app_colorAccent">#005c00</color>
+    <color name="app_white">#BCFFFFFF</color>
 </resources>
