--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,13 @@
 <resources>
 
-    <style name="feature_base_MyCustomTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/feature_base_colorPrimary</item>
-        <item name="colorPrimaryDark">@color/feature_base_colorPrimaryDark</item>
-        <item name="colorAccent">@color/feature_base_colorAccent</item>
-        <item name="android:textSize">@dimen/feature_base_font_size_default</item>
+    <style name="app_MyCustomTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/app_colorPrimary</item>
+        <item name="colorPrimaryDark">@color/app_colorPrimaryDark</item>
+        <item name="colorAccent">@color/app_colorAccent</item>
+        <item name="android:textSize">@dimen/app_font_size_default</item>
     </style>
 
-    <style name="feature_base_MyCustomTheme.ButtonListItem">
+    <style name="app_MyCustomTheme.ButtonListItem">
         <!--<item name="android:capitalize">words</item>-->
     </style>
 
