Redesign: v0.1 including tabs, scrolling behaviours and many refactors for handling toolbar and navigation views.

--- a/app/src/main/res/layout/app_activity_root.xml
+++ b/app/src/main/res/layout/app_activity_root.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/base_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        tools:targetApi="lollipop" />
+    <include layout="@layout/app_toolbar_animated" />
 
-    <FrameLayout
-        android:id="@+id/base_container"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/app_content_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/base_toolbar" />
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/app_record_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="96dp"
+        android:src="@drawable/app_ic_mic_black_24dp"
+        app:layout_anchor="@+id/app_navigation"
+        app:layout_anchorGravity="end|bottom"
+        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />
+
+    <include layout="@layout/app_navigation" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
