--- a/app/src/main/res/layout/app_layout_button.xml
+++ b/app/src/main/res/layout/app_layout_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ToggleButton style="@style/app_MyCustomTheme.ButtonListItem"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"/>
+<ToggleButton xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/app_MyCustomTheme.ButtonListItem"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
