--- a/feature_addbutton/src/main/res/layout/feature_addbutton_activity_add_button.xml
+++ b/feature_addbutton/src/main/res/layout/feature_addbutton_activity_add_button.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/feature_addbutton_MyCustomTheme.DefaultLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include layout="@layout/app_toolbar_no_animated" />
 
     <TextView
         android:id="@+id/label"
         style="@style/feature_addbutton_MyCustomTheme.Form.Label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/app_toolbar"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:text="@string/feature_addbutton_name" />
 
     <EditText
         android:id="@+id/name"
+        style="@style/feature_addbutton_MyCustomTheme.Form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/label"
@@ -28,9 +30,11 @@
 
     <Button
         android:id="@+id/saveButton"
+        style="@style/feature_addbutton_MyCustomTheme.Form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/app_material_horizontal_padding"
         android:text="@string/feature_addbutton_save" />
 
 </RelativeLayout>
