Minor look & feel improvements

--- a/app/src/main/res/color/app_bottom_navigation_colors.xml
+++ b/app/src/main/res/color/app_bottom_navigation_colors.xml
@@ -5,5 +5,5 @@
         android:color="@color/app_white" />
     <item
         android:state_checked="false"
-        android:color="@android:color/darker_gray" />
+        android:color="@color/app_white_disabled" />
 </selector>
