--- a/app/src/main/res/layout/app_toolbar_animated.xml
+++ b/app/src/main/res/layout/app_toolbar_animated.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="top"
+            style="@style/app_MyCustomTheme.Toolbar"
             app:titleMarginTop="@dimen/app_appbar_top_title_margin_top"
             tools:navigationIcon="@mipmap/app_ic_launcher"
             tools:title="A screen title"/>
