--- a/app/src/main/res/layout/app_activity_root.xml
+++ b/app/src/main/res/layout/app_activity_root.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
+        style="@style/app_MyCustomTheme.Button.RecordFAB"
         android:layout_marginBottom="96dp"
         android:src="@drawable/app_ic_mic_black_24dp"
         app:layout_anchor="@+id/app_navigation"
