--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,6 +3,8 @@
     <color name="app_colorPrimary">#90EE02</color>
     <color name="app_colorPrimaryDark">#61d800</color>
     <color name="app_colorAccent">#d602ee</color>
+    <color name="app_font_color_default">@color/app_black</color>
+    <color name="app_font_color_buttons">@color/app_black</color>
+
     <color name="app_white">#BCFFFFFF</color>
-    <color name="app_font_color_default">#E8E8E8</color>
 </resources>
