--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,12 @@
     <color name="app_colorPrimary">#6200EE</color>
     <color name="app_colorPrimaryDark">#3D00E0</color>
     <color name="app_colorAccent">#021aee</color>
-    <color name="app_white">#FFFFFF</color>
+    <color name="app_font_color_default">@color/app_black</color>
+    <color name="app_font_color_buttons">@color/app_white</color>
+
+    <!-- Actually the color palette -->
     <color name="app_transparent">#00FFFFFF</color>
-    <color name="app_font_color_default">#333333</color>
+    <color name="app_white">#FFFFFF</color>
+    <color name="app_white_disabled">#9A9A9A</color>
+    <color name="app_black">#1C1C1C</color>
 </resources>
