--- a/app/src/main/res/layout/app_toolbar_animated.xml
+++ b/app/src/main/res/layout/app_toolbar_animated.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_appbar"
+    app:elevation="0dp"
     android:layout_width="match_parent"
     android:layout_height="@dimen/app_appbar_top_height"
     android:background="@drawable/app_toolbar_background">
