--- a/app/src/main/res/layout/app_navigation.xml
+++ b/app/src/main/res/layout/app_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@id/app_navigation"
+    android:id="@+id/app_navigation"
     android:layout_width="match_parent"
     android:layout_height="@dimen/app_material_appbar_bottom_height"
     android:layout_gravity="bottom"
