--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,8 +22,8 @@
         <item name="android:textColor">@color/app_font_color_buttons</item>
     </style>
 
-    <style name="app_MyCustomTheme.Button.RecordFAB">
-        <item name="backgroundTint">@color/app_colorAccent</item>
-        <item name="tint">@color/app_white</item>
-    </style>
+<!--    <style name="app_MyCustomTheme.Button.RecordFAB">-->
+<!--        <item name="backgroundTint">@color/app_colorAccent</item>-->
+<!--        <item name="tint">@color/app_white</item>-->
+<!--    </style>-->
 </resources>
