Minor fixes and improvements

--- a/app/src/main/res/layout/app_activity_root.xml
+++ b/app/src/main/res/layout/app_activity_root.xml
@@ -7,10 +7,15 @@
     <include layout="@layout/app_toolbar_animated" />
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/app_content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <FrameLayout
+            android:id="@+id/app_content_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </androidx.core.widget.NestedScrollView>
 
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
 <!--        android:id="@+id/app_record_fab"-->
