--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,16 +12,16 @@
         <item name="titleTextColor">@color/app_white</item>
     </style>
 
-    <style name="app_MyCustomTheme.Toolbar.Animated">
+    <style name="app_MyCustomTheme.Toolbar.Animated_dynamic_feature">
         <item name="android:background">@drawable/app_toolbar_background</item>
     </style>
 
     <style name="app_MyCustomTheme.ButtonListItem" />
 
-    <style name="app_MyCustomTheme.Button">
-        <item name="android:textColor">@color/app_font_color_buttons</item>
-    </style>
-
+<!--    <style name="app_MyCustomTheme.Button">-->
+<!--        <item name="android:textColor">@color/app_font_color_buttons_dynamic_feature</item>-->
+<!--    </style>-->
+<!---->
 <!--    <style name="app_MyCustomTheme.Button.RecordFAB">-->
 <!--        <item name="backgroundTint">@color/app_colorAccent</item>-->
 <!--        <item name="tint">@color/app_white</item>-->
