--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,7 +4,7 @@
     <color name="app_colorPrimaryDark">#61d800</color>
     <color name="app_colorAccent">#d602ee</color>
     <color name="app_font_color_default">@color/app_black</color>
-    <color name="app_font_color_buttons">@color/app_black</color>
+    <color name="app_font_color_buttons_dynamic_feature">@color/app_black</color>
 
     <color name="app_white">#BCFFFFFF</color>
 </resources>
